# PodMD.Api/Endpoints/ClusterEndpoints.cs
@@ -12,7 +12,18 @@ public static class ClusterEndpoints
     {
         var group = app.MapGroup("/clusters").WithTags("Clusters");
 
-        group.MapPost("/", async (IClusterService clusterService, CreateClusterRequest request) =>
+        group.MapGet("", async (IClusterService clusterService) =>
+            {
+                var result = await clusterService.GetAllAsync();
+                return result.IsSuccessful
+                    ? Results.Ok(result.Value.Select(c => new { c.Guid, c.Host }))
+                    : Results.BadRequest(result.Error);
+            })
+            .WithName("GetClusters")
+            .Produces<IEnumerable<ClusterResponse>>()
+            .AddEndpointFilter<ApiKeyAuthenticationEndpointFilter>();
+
+        group.MapPost("", async (IClusterService clusterService, CreateClusterRequest request) =>
             {
                 var result = await clusterService.CreateAsync(request.Host, request.Token);
                 return result.IsSuccessful
@@ -50,7 +61,55 @@ public static class ClusterEndpoints
             .Produces(StatusCodes.Status204NoContent)
             .AddEndpointFilter<ApiKeyAuthenticationEndpointFilter>();
 
-        group.MapPost("/{clusterGuid:guid}/how-to-fix",
+        group.MapGet("/{clusterGuid:guid}/knowledge-bases",
+                async (IClusterService clusterService, Guid clusterGuid) =>
+                {
+                    var cluster = await clusterService.GetByGuidAsync(clusterGuid);
+                    if (cluster is null) return Results.NotFound();
+
+                    return Results.Ok(cluster.KnowledgeBases.Select(kb => new { kb.Guid, kb.Name, kb.Description }));
+                })
+            .WithName("GetClusterKnowledgeBases")
+            .Produces<IEnumerable<KnowledgeBaseResponse>>()
+            .AddEndpointFilter<ApiKeyAuthenticationEndpointFilter>();
+
+        group.MapPost("/{clusterGuid:guid}/knowledge-bases/{knowledgeBaseGuid:guid}",
+                async (IClusterService clusterService, IKnowledgeBaseService knowledgeBaseService, Guid clusterGuid,
+                    Guid knowledgeBaseGuid) =>
+                {
+                    var cluster = await clusterService.GetByGuidAsync(clusterGuid);
+                    if (cluster is null) return Results.NotFound();
+
+                    var knowledgeBase = await knowledgeBaseService.GetByGuidAsync(knowledgeBaseGuid);
+                    if (knowledgeBase is null) return Results.NotFound();
+
+                    var result = await clusterService.LinkAsync(cluster, knowledgeBase);
+
+                    return result.IsSuccessful ? Results.Ok(result.Value) : Results.BadRequest(result.Error);
+                })
+            .WithName("LinkClusterToKnowledgeBase")
+            .Produces(StatusCodes.Status204NoContent)
+            .AddEndpointFilter<ApiKeyAuthenticationEndpointFilter>();
+
+        group.MapDelete("/{clusterGuid:guid}/knowledge-bases/{knowledgeBaseGuid:guid}",
+                async (IClusterService clusterService, IKnowledgeBaseService knowledgeBaseService, Guid clusterGuid,
+                    Guid knowledgeBaseGuid) =>
+                {
+                    var cluster = await clusterService.GetByGuidAsync(clusterGuid);
+                    if (cluster is null) return Results.NotFound();
+
+                    var knowledgeBase = await knowledgeBaseService.GetByGuidAsync(knowledgeBaseGuid);
+                    if (knowledgeBase is null) return Results.NotFound();
+
+                    var result = await clusterService.UnlinkAsync(cluster, knowledgeBase);
+
+                    return result.IsSuccessful ? Results.Ok(result.Value) : Results.BadRequest(result.Error);
+                })
+            .WithName("UnlinkClusterFromKnowledgeBase")
+            .Produces(StatusCodes.Status204NoContent)
+            .AddEndpointFilter<ApiKeyAuthenticationEndpointFilter>();
+
+        group.MapPost("/{clusterGuid:guid}/logs/recommend-fixes",
                 async (IClusterService clusterService, Guid clusterGuid,
                     HowToFixRequest request) =>
                 {
@@ -61,7 +120,7 @@ public static class ClusterEndpoints
                         request.Pod, request.Tail, request.SinceTime);
                     return result.IsSuccessful ? Results.Ok(result.Value) : Results.BadRequest(result.Error);
                 })
-            .WithName("HowToFix")
+            .WithName("RecommendFixes")
             .Produces<TroubleshootingResponse>()
             .AddEndpointFilter<ApiKeyAuthenticationEndpointFilter>();
     }
