# PodMD.Api/Responses/RagResourceResponse.cs
@@ -1,3 +1,0 @@
-namespace PodMD.Api.Responses;
-
-public record RagResourceResponse(Guid Guid, string Name);
