# PodMD.Api/Responses/ResourceResponse.cs
@@ -1,0 +1,3 @@
+namespace PodMD.Api.Responses;
+
+public record ResourceResponse(Guid Guid, string Name);
